force-app/main/default/objects/Quote/fields/Commentaire_devisOLD__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_devisOLD__c</fullName>
    <label>Commentaire devis</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>