force-app/main/default/objects/Quote/fields/CommentaireDevis__c.field-meta.xml
<CustomField>
    <fullName>CommentaireDevis__c</fullName>
    <formula>Opportunity.Commentaire_devis__c</formula>
    <label>Commentaire devis</label>
    <type>Text</type>
</CustomField>