force-app/main/default/objects/Quote/fields/Conditions_de_restauration__c.field-meta.xml
<CustomField>
    <fullName>Conditions_de_restauration__c</fullName>
    <formula>TEXT(Opportunity.Conditions_de_restauration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conditions de restauration</label>
    <type>Text</type>
</CustomField>