force-app/main/default/objects/Quote/fields/Date_de_d_but__c.field-meta.xml
<CustomField>
    <fullName>Date_de_d_but__c</fullName>
    <formula>Opportunity.Date_de_d_but__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>