force-app/main/default/objects/Quote/fields/Date_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin__c</fullName>
    <formula>Opportunity.Date_fin_formation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>