force-app/main/default/objects/Quote/fields/Date_de_fin_old__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_old__c</fullName>
    <description>Définit la date de fin du devis</description>
    <label>Date de fin_old</label>
    <type>Date</type>
</CustomField>