force-app/main/default/objects/Quote/fields/Date_de_formation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_formation__c</fullName>
    <formula>Opportunity.Information_session__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de formation</label>
    <type>Text</type>
</CustomField>