force-app/main/default/objects/Quote/fields/Date_debut_old__c.field-meta.xml
<CustomField>
    <fullName>Date_debut_old__c</fullName>
    <description>Définit la date de début du devis</description>
    <label>Date de début_old</label>
    <type>Date</type>
</CustomField>