force-app/main/default/objects/Quote/fields/Destinataire__c.field-meta.xml
<CustomField>
    <fullName>Destinataire__c</fullName>
    <formula>Text(Opportunity.Contact_central__r.Salutation)&amp;&quot; &quot;&amp;Opportunity.Contact_central__r.FirstName&amp;&quot; &quot;&amp;Opportunity.Contact_central__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destinataire</label>
    <type>Text</type>
</CustomField>