force-app/main/default/objects/Quote/fields/Discount_devis__c.field-meta.xml
<CustomField>
    <fullName>Discount_devis__c</fullName>
    <formula>IF(Discount &gt;0, Discount ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>