force-app/main/default/objects/Quote/fields/Dossier_suivi_par__c.field-meta.xml
<CustomField>
    <fullName>Dossier_suivi_par__c</fullName>
    <formula>Opportunity.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dossier suivi par</label>
    <type>Text</type>
</CustomField>