force-app/main/default/objects/Quote/fields/Email_Professionnel_DEVIS__c.field-meta.xml
<CustomField>
    <fullName>Email_Professionnel_DEVIS__c</fullName>
    <formula>Opportunity.Contact_central__r.Email_de_repli__c</formula>
    <label>Email Professionnel</label>
    <type>Text</type>
</CustomField>