force-app/main/default/objects/Quote/fields/Email_suiveur__c.field-meta.xml
<CustomField>
    <fullName>Email_suiveur__c</fullName>
    <formula>Opportunity.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email suiveur</label>
    <type>Text</type>
</CustomField>