force-app/main/default/objects/Quote/fields/Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Entreprise__c</fullName>
    <description>Entreprise déclarée de la liste contact</description>
    <label>Entreprise</label>
    <length>100</length>
    <type>Text</type>
</CustomField>