force-app/main/default/objects/Quote/fields/Entreprise_d_clar_e__c.field-meta.xml
<CustomField>
    <fullName>Entreprise_d_clar_e__c</fullName>
    <formula>Opportunity.Contact_central__r.Entreprise_d_clar_e__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entreprise déclarée</label>
    <type>Text</type>
</CustomField>