force-app/main/default/objects/Quote/fields/Lieu__c.field-meta.xml
<CustomField>
    <fullName>Lieu__c</fullName>
    <description>Définit lieu de la formation</description>
    <label>Lieu_OLD</label>
    <length>60</length>
    <type>Text</type>
</CustomField>