force-app/main/default/objects/Quote/fields/Lieu_de_formation__c.field-meta.xml
<CustomField>
    <fullName>Lieu_de_formation__c</fullName>
    <formula>Opportunity.Lieu_de_formation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lieu de formation</label>
    <type>Text</type>
</CustomField>