force-app/main/default/objects/Quote/fields/Nombre_dheures__c.field-meta.xml
<CustomField>
    <fullName>Nombre_dheures__c</fullName>
    <formula>Opportunity.Nombre_d_heures__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre d&apos;heures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>