force-app/main/default/objects/Quote/fields/Nombre_heures__c.field-meta.xml
<CustomField>
    <fullName>Nombre_heures__c</fullName>
    <label>Nombre d&apos;heures_OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>