force-app/main/default/objects/Quote/fields/Nombre_jours__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours__c</fullName>
    <label>Nombre de jours_OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>