force-app/main/default/objects/Quote/fields/nos_references__c.field-meta.xml
<CustomField>
    <fullName>nos_references__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nos Références</label>
    <type>Text</type>
</CustomField>