force-app/main/default/objects/Quote/fields/Societe__c.field-meta.xml
<CustomField>
    <fullName>Societe__c</fullName>
    <formula>Opportunity.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Société</label>
    <type>Text</type>
</CustomField>