force-app/main/default/objects/Quote/fields/T_l_phone_DEVIS__c.field-meta.xml
<CustomField>
    <fullName>T_l_phone_DEVIS__c</fullName>
    <formula>Opportunity.Contact_central__r.Phone</formula>
    <label>Téléphone</label>
    <type>Text</type>
</CustomField>