force-app/main/default/objects/Quote/fields/telephone_suiveur__c.field-meta.xml
<CustomField>
    <fullName>telephone_suiveur__c</fullName>
    <formula>Opportunity.Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Téléphone Suiveur</label>
    <type>Text</type>
</CustomField>