force-app/main/default/objects/Quote/fields/Votre_formation__c.field-meta.xml
<CustomField>
    <fullName>Votre_formation__c</fullName>
    <formula>Opportunity.Votre_formation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Votre formation</label>
    <type>Text</type>
</CustomField>